# auth-server

./: .gitignore  AppSettings.cs  AuthServer.csproj  AuthServer.sln  Cargo.toml  Program.cs  README.md  Startup.cs  appsettings.json  example-config.yaml
Controllers/: AuthController.cs
Controllers/Models/: LoginRequest.cs  TokenMessage.cs  TokenResponse.cs
Entities/: Credential.cs  Identity.cs  User.cs
Properties/: launchSettings.json
Repository/: AuthContext.cs
src/: config.rs  db.rs  main.rs  models.rs
