[package]
name = "auth-server"
version = "0.1.0"
authors = ["Jared Weinberger <jared.j.weinberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
serde_json = "1.0"
log = "0.4.8"
simple_logger = "1.6.0"
rust-argon2 = "0.8"
rand = "0.7.3"
tokio-postgres = "0.5.4"
tokio = { version = "0.2.21", features = [ "full" ] }
warp = "0.2.3"
